--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
+<body>   
 <div class="row">
     <div class="col-xs-12">
-<app-header (featureSelected)="onNavigate($event)"></app-header>
-<router-outlet></router-outlet>
+    <app-header (featureSelected)="onNavigate($event)"></app-header>
+    <router-outlet></router-outlet>
     </div>
 </div>
+</body>
