--- a/src/app/help/components/contact/contact.component.html
+++ b/src/app/help/components/contact/contact.component.html
@@ -62,9 +62,9 @@
 			[disabled]="contactForm.invalid"
 			(click)="onSubmit()"
 			(click)="openDialog()">Submit</button>
-			<button mat-button class="buttonSumbit" class="btn btn-primary"
+			<!-- <button mat-button class="buttonSumbit" class="btn btn-primary"
 			(click)="onGetData()"			
-			>Get</button>
+			>Get</button> -->
 		</div>
 	
 </form>
