--- a/src/app/cloth/components/cloth-detail/cloth-detail.component.html
+++ b/src/app/cloth/components/cloth-detail/cloth-detail.component.html
@@ -15,8 +15,13 @@
   </div>
   <div class="row">
     <div class="col-xs-12">
-      {{ cloth.description }}
       
+      {{ cloth.description }}  
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <p>Amount in the stock: {{ cloth.amount }} </p>   
     </div>
   </div>
  </div>  
