--- a/src/app/help/components/about/about.component.html
+++ b/src/app/help/components/about/about.component.html
@@ -8,12 +8,12 @@
   <span style="--i:4">H</span>
   <span style="--i:5">O</span>
   <span style="--i:6">P</span>
-</div><br><hr>
+</div>
 
-<!-- <svg viewBox="0 0 960 300">
+<svg viewBox="0 0 960 300">
 <symbol id="s-text">
-  <text text-anchor="middle" x="50%" y="80%">OUR SHOP. </text>
-  <text text-anchor="middle" x="52%" y="80%">OUR SHOP. </text>  
+  <text text-anchor="middle" x="50%" y="80%">WELCOME. </text>
+  <text text-anchor="middle" x="52%" y="80%">WELCOME. </text>  
 </symbol>
   
 <g class = "g-ants">
@@ -23,7 +23,7 @@
   <use xlink:href="#s-text" class="text-copy"></use>
   <use xlink:href="#s-text" class="text-copy"></use>
 </g>
-</svg> -->
+</svg>
 
 
 <swiper
@@ -43,8 +43,6 @@ class="my-swiper">
   </div>
 </ng-template>
 </swiper>
-
-
 
 <p class="aboutText">
     There are many variations of passages of Lorem Ipsum available,<br>
