--- a/src/app/help/components/about/about.component.scss
+++ b/src/app/help/components/about/about.component.scss
@@ -6,13 +6,11 @@
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 
-
 .waviy {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
-
 
 .waviy {
   display: flex;
@@ -21,8 +19,6 @@
   position: relative;
   -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0,0,0,.2));
   font-size: 60px;
-  
-
 }
 
 .waviy span {
@@ -50,9 +46,6 @@
   }
 }
 
-
-
-
 .aboutTitle {
     color: black;
     text-align: center;
@@ -61,8 +54,7 @@
     height: 80px;
 
     font-weight: bold;
- 
-}
+  }
 
 .aboutText {
     color: black;
@@ -152,7 +144,7 @@ animation-delay: -4s;
 }
 
 .text-copy:nth-child(5){
-stroke: #FDB731;
+stroke: #fd313184;
 animation-delay: -5s;
 }
 
